devel.examples/Bad-Example/lib/Bad/Example/Class2.pm
package Bad::Example::Class2;
use Bad::Example::Mite;
with 'Bad::Example::Role2';
#sub missing { 1 }
1;